# zero2prod_rust_backend_dev

./: .env  Cargo.toml  Dockerfile  README.md  configuration.yaml  docker-compose.yml  tailwind.config.js
.github/workflows/: rust.yml
.sqlx/: query-216db081bdd3b91619800861a39dc289ba18aa0e86d713b61a1456556f7a569b.json
configuration/: base.yaml  production.yaml
migrations/: 20231204130754_create_subscriptions_table.sql  20240117084549_add_status_to_subscriptions.sql  20240117175550_make_status_not_null_in_subscriptions.sql  20240118064525_create_subscription_tokens_table.sql
scripts/: init_postgres.sh
src/: configuration.rs  email_clients.rs  lib.rs  main.rs  startup.rs  telemetry.rs  templating.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  mod.rs  subscription.rs  subscription_confirm.rs
static/root/: index.html
static/root/css/: style.css
templates/: health_check.html  hello.html
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  main.rs  newsletter.rs  subscription_confirmation.rs  subscriptions.rs
