[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Hangyuan Liu<lhyuan.liu21@icloud.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
config = "0.13"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
uuid = { version = "1.6", features = ["v4"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-actix-web = '0.7'
once_cell = '1'
secrecy = { version = "0.8", features = ["serde"] }

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
]

[dev-dependencies]
reqwest = '0.11'

[alias]
docker-build = 'docker build -tag zero2prod -file Dockerfile .'
docker-run = 'docker run -p 8000:8000 zero2prod | bunyan'
